--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.22.6",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.5",
     "i18next": "^21.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^11.18.4"
+    "react-i18next": "^11.18.4",
+    "react-router-dom": "^6.3.0",
+    "screenfull": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "@vitejs/plugin-react": "^2.0.0",
+    "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -33,7 +38,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.54.4",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0",
+    "vite": "^3.0.9",
     "vite-plugin-mock": "^2.9.6"
   }
 }
