--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "noImplicitAny": false,
     "noEmit": true,
     "jsx": "react-jsx",
+    "sourceMap": true,
     "baseUrl": "./",
     "paths":{
       "@": ["src"],
